--- a/quant-ph-0011082/verdammt.tex
+++ b/quant-ph-0011082/verdammt.tex
@@ -266,9 +266,8 @@ literally and pushing it to what seems to be its logical conclusion, and
 
 \section{Quantum Jumps and Watched Pots: Theory and Experiment}
 
-\medskip
-\begin{center} A WATCHED POT NEVER BOILS \end{center}
-\smallskip
+\subsection{A watched pot never boils}
+
 
 Let us imagine ourselves in the situation of steadily watching the unstable 
 particle $A$ in the process $A \rightarrow B+C$ --- suppose it is a radioactive 
@@ -308,12 +307,11 @@ if we start out knowing that it has not decayed. A watched pot never boils.
 Either that, or continu{\em al} measurement is not a good model for continu{\em 
 ous} observation.
 
-\medskip
-\begin{center} WATCHED POTS IN THE LABORATORY\footnote{For a good recent
-review see \cite{Whitaker:PQE}.} \end{center}
-\smallskip
+\subsection{Watched pots in the laboratory}
+
 The conclusion of the above theorem has come to be known as the quantum 
-Zeno paradox --- an unfortunate name, since Zeno's paradox of the arrow 
+Zeno paradox \footnote{For a good recent
+review see \cite{Whitaker:PQE}.} --- an unfortunate name, since Zeno's paradox of the arrow 
 was resolved by Newton in classical mechanics and does not even arise 
 in quantum mechanics. (Zeno's argument was that if one only considers 
 the configuration of a physical object in space, there is no difference 
@@ -446,9 +444,8 @@ same half-period, it was found that all of the ions were now in the
 ground state. The watched pot had not boiled. 
 
 
-\medskip
-\begin{center} WATCHED POTS IN THE STUDY \end{center}
-\smallskip
+\subsection{Watched pots in the study}
+
 
 What is the theoretical difference between these two experiments, and 
 why doesn't the watched-pot theorem apply equally to both? In both cases 
@@ -514,9 +511,7 @@ of the watched-pot effect.
 
 \section{Transition Postulates}
 
-\medskip
-\begin{center} NECESSARY TRANSITION PROBABILITIES \end{center}
-\smallskip
+\subsection{Necessary transition probabilities}
 
  We are left with a theoretical problem. If we cannot use the notion of 
 ``measurement at time $t$'' to explain the meaning of a time-dependent 
@@ -559,9 +554,7 @@ state between the different subspaces. I will call the latter the {\em pilot} st
 function in the de Broglie/Bohm theory, a special case of this theory in which 
 the visible states are eigenstates of position \cite{determlimit}).
 
-\medskip
-\begin{center} POSSIBLE TRANSITION PROBABILITIES \end{center}
-\smallskip
+\subsection{Possible transition probabilities}
 
 We know how the pilot state changes in time: it satisfies the
 Schr\"odinger equation. What are the rules governing the change of the
@@ -637,9 +630,7 @@ $|\psi_m\>$. As we will now see, this is a natural feature of decay
 processes.
 
 
-\medskip
-\begin{center}APPLICATION TO DECAY PROCESSES\end{center}
-\smallskip
+\subsection{Application to decay processes}
 
  Let us return to the problem of the unstable particle and model the
 decay  $A\rightarrow B+C$ a little more realistically. If the decay
@@ -760,9 +751,7 @@ state $|\psi_1\>$. This confirms that, if the viable
 subspaces are chosen as above, Bell's transition probabilities
 give a satisfactory description of the decay process.
 
-\medskip
-\begin{center}CHOICES, CHOICES\ldots \end{center}
-\smallskip
+\subsection{Choices, choices,$\ldots$}
 
 That last sentence would be a triumphant conclusion if it were not for
 the fatal weakness of its qualifying clause. Bell's formulation of
@@ -845,9 +834,7 @@ the world. We find ourselves once again having to make arbitrary
 choices. Desperate attempts to have our cake and eat it are doomed to
 failure \cite{Vermaas:nogo}.
 
-\medskip
-\begin{center}\ldots AND HOW TO LIVE WITH THEM\end{center}
-\smallskip
+\subsection{\ldots and how to live with them}
 
 If arbitrary choices cannot be avoided, we must consider how to live
 with them. But we are used to living with arbitrary choices in physics;
@@ -877,9 +864,7 @@ a claim that it is the natural context in which to introduce the quantum
 jumps whose necessity is the subject of this paper.
 
 
-\medskip
-\begin{center}INTERNAL AND EXTERNAL\end{center}
-\smallskip
+\subsection{Internal and external}
 
 In Bell's beable interpretation the identities of both the pilot state 
 and the visible state are, at any given time, facts about the world.
@@ -1027,11 +1012,7 @@ expansion of the universal state vector with respect to this basis:
 \]
 \end{enumerate}
 
-\medskip
-\begin{center}
-  IS YOUR POSTULATE REALLY NECESSARY?
-\end{center}
-\smallskip
+\subsection{Is your postulate really necessary?}
 
 In the actual practice of physicists giving theoretical analyses of
 experiments in quantum optics, like the quantum-jump and watched-pot
@@ -1144,7 +1125,9 @@ be bound by time eventually, it seems to me to be best not to put it off
 and to acknowledge the inescapable importance of time in our experience
 and our understanding.  
 
-
+\newpage
+\section*{}
+\currentpdfbookmark{Appendix: Quantum Theory of Quantum Jumps}{app}
 \section*{Appendix: Quantum Theory of Quantum Jumps}
 
 In this appendix we give a conventional quantum-mechanical theory of the
@@ -1463,6 +1446,9 @@ is (in classical terms) a state specification.
 
 %\bibliographystyle{plain}
 %\bibliography{quantum}
+
+\newpage
+\currentpdfbookmark{References}{bib}
 
 \begin{thebibliography}{10}
 
