--- a/quant-ph-0011082/verdammt.tex
+++ b/quant-ph-0011082/verdammt.tex
@@ -679,7 +679,7 @@ integro-differential equation
 -\frac{\varepsilon^2}{\hbar^2}
 \int_0^t\chi(t-t^\prime)f(t^\prime)e^{iE_0t^\prime/\hbar}dt^\prime 
 \end{equation}
-with\upline
+with
 \[
 \chi(t) = \<\psi_1|e^{-iH_0t/\hbar}|\psi_1\>.
 \]
@@ -689,7 +689,7 @@ the variation of $f$ on time scales of the order of $\tau$, is
 \[
 f(t) \approx e^{-\Gamma\tau}e^{-iE_0t/\hbar}
 \]
-with \upline
+with 
 \[
 \Gamma = \frac{\varepsilon^2}{\hbar^2}\int_0^\tau\chi(t)dt.
 \]
@@ -1184,12 +1184,13 @@ by replacing these by
 H_{\tR} = \lambda \e^{-i(\Omega_{\tR} + \Delta_{\tR})t}|\psi_1\>\<\psi_0| +
         \lambda^*\e^{i(\Omega_{\tR} + \Delta_{\tR})t}|\psi_0\>\<\psi_1|
 \end{equation}
-\upline
+\noindent
 and
 \begin{equation}
 H_{\tB} = \Lambda \e^{-i(\Omega_{\tB} + \Delta_{\tB})t}|\psi_2\>\<\psi_0| +
         \Lambda^*\e^{i(\Omega_{\tB} + \Delta_{\tB})t}|\psi_0\>\<\psi_2| 
 \end{equation}
+\noindent
 where $|\psi_0\>$, $|\psi_1\>$ and $|\psi_2\>$ are the three atomic states and
 \[
 \lambda = e\<\psi_1|\br\cdot\bE_{\tR}|\psi_0\>, \qquad
