--- a/quant-ph-0011082/verdammt.tex
+++ b/quant-ph-0011082/verdammt.tex
@@ -854,7 +854,7 @@ Then, indeed, one is obliged to say from where one is observing, what
 subsystem of the world is doing the observing, and what observables are
 being observed.
 
-This brings us to Everitt's relative-state formulation of quantum
+This brings us to Everett's relative-state formulation of quantum
 mechanics, which is closely related to Bell's beable formulation and to
 modal interpretations, though in some respects it is directly opposed to
 them. I would now like to present the relative-state formulation in a 
