--- a/quant-ph-0011084/quant-ph-0011084-psu.tex
+++ b/quant-ph-0011084/quant-ph-0011084-psu.tex
@@ -141,7 +141,10 @@ meeting in Birmingham on 12 September 2000.
 
 \end{abstract}
 
+\thispagestyle{empty}
 \newpage
+
+\section{Introduction}
 
 In this talk I want to explore the possibility of a connection between
 the problem of understanding quantum mechanics and a number of classical
