--- a/1011.6451/QMfromPuriPRA-resub.tex
+++ b/1011.6451/QMfromPuriPRA-resub.tex
@@ -17,8 +17,8 @@ bookmarksopenlevel=10
 }
 %\usepackage{cfr-lm}
 \usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \pagestyle{plain}
@@ -114,6 +114,8 @@ bookmarksopenlevel=10
 
 
 \tableofcontents
+\newpage
+
 \section{Introduction}
 
 
