--- a/quant-ph-0210017/quant-ph-0210017.tex
+++ b/quant-ph-0210017/quant-ph-0210017.tex
@@ -1,11 +1,9 @@
-\documentclass[pra,12pt,tightenlines]{revtex4}
+\documentclass[pra,12pt,tightenlines]{revtex4-2}
 %\documentclass[pra,12pt]{revtex4}
 
 \usepackage{bm}
 
 \usepackage{graphicx}
-
-\begin{document}
 
 \def\ket#1{|#1\rangle}
 \def\bra#1{\langle#1|}
@@ -14,6 +12,51 @@
 \def\yes{{\rm yes}}
 
 \newcommand{\vc}[2]{\left(\begin{array}{c}{\!\!#1\!\!}\\{\!\!#2\!\!}\end{array}\right)}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+\begin{document}
 
 \title{Quantum theory from four of Hardy's axioms}
 
