--- a/math-ph-0002049/qbib.tex
+++ b/math-ph-0002049/qbib.tex
@@ -1,3 +1,6 @@
+
+
+\raggedright
 \begin{thebibliography}{99}
 \bibitem{Milligan} Milligan, Spike. `Adolf Hitler: my part in his downfall',
 Penguin Books, 1972.
