--- a/math-ph-0002049/new2000.tex
+++ b/math-ph-0002049/new2000.tex
@@ -1,6 +1,49 @@
-\documentstyle[11pt]{article}
-\renewcommand{\textwidth}{5.6in}
-\renewcommand{\textheight}{8in}
+\documentclass[12pt]{article}
+
+\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{definition}[theorem]{Definition}
@@ -19,9 +62,13 @@ this theory. The great achievements of probability theory, such as
 the theory of processes, generalised random fields, estimation
 theory and information geometry, are reviewed. Their quantum versions
 are then described.\\
+\\
 {\bf Keywords}: Probability, sampling, processes, Markov chains, random fields,
 Fisher information, quantum probability, quantum information manifolds.
 \end{abstract}
+\thispagestyle{empty}
+\newpage
+
 \section{Introduction}
 The are few mathematical topics that are as badly taught to physicists
 as probability theory. Maxwell, Boltzmann and Gibbs were using probabilistic
