psychotic single quotes

--- a/math-ph-0002049/new20002.tex
+++ b/math-ph-0002049/new20002.tex
@@ -348,9 +348,9 @@ the space of
 bounded functions.
 
 Let us now examine Bohm's claim that there is a hidden
-assumption in Bell's proof, that of `locality'. It is now generally
-agreed that the term `local', referring to the space-localisation,
-is not the best, and that `non-contextual' is a better term; namely
+assumption in Bell's proof, that of ``locality''. It is now generally
+agreed that the term ``local'', referring to the space-localisation,
+is not the best, and that ``non-contextual'' is a better term; namely
 that the choice of random variable $f$ assigned to represent a certain
 observable $a$ which is being measured, does not depend on which of the
 other observables, $a^\prime$ or $b^\prime$, is being measured at the
@@ -363,7 +363,7 @@ The two choices will, however, have the
 same distribution. It should be said straight away that this idea is
 contrary to the practice of probabilists, who would expect there to be
 a unique random variable representing an observable. It also goes against
-the definition of `element of reality' of {\em EPR} as extended by us
+the definition of ``element of reality'' of {\em EPR} as extended by us
 to the random case. The quantum version does not suffer from this unreality,
 since the mathematical object assigned to the observable, the Hermitian
 matrix, does not depend on the context, i.e. is local in Bohm's language.
@@ -419,7 +419,7 @@ collection, and has no predictive power. Mere data give us no
 more than mere data.
 
 Another variant of quantum mechanics, a new form of algebra
-called `quantum logic', was developed in
+called ``quantum logic'', was developed in
 \cite{Birkhoff2}. New rules by which propositions can be
 manipulated are given. This was worked on later by Jauch and coworkers \cite{Jauch},
 culminating in Piron's thesis. This says that the propositions
@@ -457,7 +457,7 @@ g(\hat{X}_i,\hat{X}_j)=\mbox{Tr}\left[\int_0^1\rho^\lambda\hat{X}_i\rho^
 {1-\lambda}\hat{X}_jd\lambda\right]
 \end{equation}
 This is the closest point on ${\cal M}$ to any state with the given
-means, where `distance' is measured by the relative entropy $S(\rho|
+means, where ``distance'' is measured by the relative entropy $S(\rho|
 \rho^\prime):=\mbox{Tr}\,\rho[\log\rho-\log\rho]$.
 Again, the $\xi^j$ are uniquely determined by
 the measured means $\eta_i$.
