--- a/math-ph-0002049/new20003.tex
+++ b/math-ph-0002049/new20003.tex
@@ -49,8 +49,8 @@ The modern method is to get the cow off the ice using Kolmogorov, and
 supplement it with further estimates, on tightness and radonifying maps,
 if we need to find smaller carrier spaces for the measure
 \cite{Gross,Schwartz}.
-After Kolmogorov's treatise, the subject could develop `in the usual
-professional mathematical way', to use Segal's phrase. That is, theorems
+After Kolmogorov's treatise, the subject could develop ``in the usual
+professional mathematical way'', to use Segal's phrase. That is, theorems
 could be stated and proved, and then sharpened. The most important of these
 were the laws of large numbers, the zero-one laws, the central limit
 theorems,
@@ -342,7 +342,7 @@ in $y$ and measurable in $x,y$.
 This result can be improved and generalised, so
 that vector-valued stochastic processes can be studied, and the noise
 can be of a much more general martingale than $W_t$.
-This can be reworded as a `martingale problem' \cite{Stroock}.
+This can be reworded as a ``martingale problem'' \cite{Stroock}.
 
 
 The converse to Ito integration should be a form of differentiation:
@@ -481,7 +481,7 @@ We now give a brief account of the Feynman-Kac formula \cite{Kac}.
 Feynman related the quantum transition amplitude $\langle\psi,e^{-iHt}\phi
 \rangle$ to the integral over histories of $\langle\psi,e^{i\int L(s)\,ds}\phi
 \rangle$ where $L$ is the Lagrangian \cite{Feynman}. The trouble is,
-the Feynman `integral' over histories is not based on measures, but on
+the Feynman ``integral'' over histories is not based on measures, but on
 oscillatory integrals, and these rarely converge. In quantum
 physics, the spectrum of the energy is bounded below (at least
 at zero temperature). This expresses the
