--- a/math-ph-0002049/new20006.tex
+++ b/math-ph-0002049/new20006.tex
@@ -92,7 +92,7 @@ has many of the properties of the second derivative, including some
 positivity, which mimics the positive spectrum of $-\Delta$ and the
 positivity improving properties of $e^{\Delta t}$.
 Lindblad has analysed continuous semigroups of cp maps, with generator ${\cal
-L}$, in terms of the `dissipation operator', being minus the coboundary of
+L}$, in terms of the ``dissipation operator'', being minus the coboundary of
 $L$:
 \begin{equation}
 D(A,B):=-\delta{\cal L}(A,B)={\cal L}(AB)-{\cal L}(A)B-A{\cal L}(B).
@@ -329,7 +329,7 @@ and that the solution obeys the Markov property \cite{Barnett6}.
 
 Manipulations of differentials
 are similar to the Ito calculus: $(dt)^2=0=(dt)(d\Psi)$; $(d\Psi)^2=dt$.
-Pisier and Xu have obtained `Burkholder-Gundy' inequalities
+Pisier and Xu have obtained ``Burkholder-Gundy'' inequalities
 within this theory \cite{Pisier}.
 
 The central state $\varphi$ of the Clifford algebra corresponds physically
@@ -337,7 +337,7 @@ to an infinite temperature.
 For the {\em CCR} and {\em CAR} algebras, we constructed the stochastic
 integrals starting with quasifree states with no Fock part, using the
 non-central state in place of the trace \cite{Barnett4,Lindsay}. This theory
-is somewhat technical (`unreadable' \cite{Meyer2}).
+is somewhat technical (``unreadable'' \cite{Meyer2}).
 
 The general Lindblad semigroup can be dilated \cite{Evans}
 using the flow defined by a solution to a quantum stochastic equation in
@@ -357,7 +357,7 @@ T_t(X)\otimes I_{\cal F}=E_0[\alpha_t(X\otimes I_{\cal F}0],\hspace{.3in}
 X\in{\cal B}({\cal H}),\;\;t\in{\bf R}.
 \end{equation}
 \end{theorem}
-The evolution $\alpha_t$ is a perturbation of the `free evolution'
+The evolution $\alpha_t$ is a perturbation of the ``free evolution''
 $\alpha_t^0$ on ${\cal B}({\cal H})$, of the form
 \begin{equation}
 \alpha_t(\,.\,)=U(t)\alpha_t^0(\,.\,)U(t)^*,
