--- a/1412.2409/1412.2409.tex
+++ b/1412.2409/1412.2409.tex
@@ -1,24 +1,52 @@
-\documentclass[aps,pra,superscriptaddress,12pt,tightenlines,nofootinbib]{revtex4}
+\documentclass[aps,pra,superscriptaddress,12pt,tightenlines,nofootinbib]{revtex4-2}
 \usepackage{amsmath,amsthm,graphicx,amssymb,verbatim,listings}
 \usepackage[T1]{fontenc}     % needed for the guillemets
-\usepackage{lmodern}         % needed to fix suboptimal font rendering
-                             % caused by fontenc
-\usepackage[ pdftex, plainpages = false, pdfpagelabels,
-                 pdfpagelayout = useoutlines,
-                 bookmarks,
-                 bookmarksopen = true,
-                 bookmarksnumbered = true,
-                 breaklinks = true,
-                 linktocpage=all,
-                 pagebackref=false,
-                 colorlinks = true,
-                 linkcolor = BrickRed,
-                 urlcolor  = blue,
-                 citecolor = BrickRed,
-                 anchorcolor = green,
-                 hyperindex = true,
-                 hyperfigures
-                 ]{hyperref}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+
+
 \usepackage[usenames, dvipsnames, svgnames, table]{xcolor}
 \usepackage{xifthen} % provides \isempty test
 
@@ -1326,6 +1354,8 @@ provide the amber to preserve fabrications both whimsical and
 malicious.  For good or ill, the flies endure.
 
 \begin{thebibliography}{999}
+
+\raggedright
 
 \bibitem{Aaronson2013} S.\ Aaronson,
   \booktitle{Quantum Computing Since Democritus} (Cambridge University
