--- a/1412.2409/1412.2409.tex
+++ b/1412.2409/1412.2409.tex
@@ -14,7 +14,7 @@
 \input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
-\usepackage[small]{titlesec}
+%\usepackage[small]{titlesec}
 \usepackage{microtype}
 
 % hyperref last because otherwise some things go wrong.
