--- a/quant-ph-0011082/verdammt.tex
+++ b/quant-ph-0011082/verdammt.tex
@@ -703,7 +703,7 @@ Using the suffix $d$ (= decayed) to refer to $\S^\prime$, we have
 transition probabilities $T_{0d}$ and $T_{d0}$ determined by the real
 part of the matrix element 
 \[
-\frac{1}{i\hbar}\<\psi(t)|\Pi_0 H \Pi_d|\psi(t)\> =
+\frac{1}{i\hbar}\<\psi(t)|\Pi_0 H\, \Pi_d|\psi(t)\> =
 -\frac{\varepsilon^2}{\hbar^2}\overline{f(t)}\int_0^t
 q(t-t^\prime)f(t^\prime)dt^\prime.
 \]
@@ -715,7 +715,7 @@ There is still a possibly counter-intuitive element in this picture. If
 a transition occurs from the unstable state $|\psi_0\>$ at time $t$, it
 goes to the state 
 \[
-\Pi_d|\psi(t)\> = N^{-1}\int_0^t
+\Pi_d|\psi(t)\> = {1\over N}\int_0^t
 f(t^\prime)e^{-iH_0(t-t^\prime)/\hbar}|\psi_1\>dt^\prime
 \]
 (where $N$ is a normalisation factor) which is a superposition of states
@@ -739,7 +739,7 @@ the eigenvalues of $T$ are spaced at equal intervals $\tau$; then
 Now the transition probability from $|\psi_0\>$ to $|\psi_m\>$ is the
 imaginary part of 
 \[ 
-\<\psi(t)|\Pi_m H \Pi_0|\psi(t)\> = \varepsilon
+\<\psi(t)|\Pi_m H\, \Pi_0|\psi(t)\> = \varepsilon
 f(t)\<\psi(t)|\Pi_m|\psi_1\>
 \]
 which vanishes unless $m=1$. Thus the decay can only be to the correct
@@ -997,7 +997,7 @@ $|\phi_m\>$ at time $t+\delta t$ is $T_{mn}\delta t$ where
 \begin{align}
 T_{mn} &= \frac{\max(J_{mn},0)}{\<\psi_n(t)|\psi_n(t)\>},\\
 J_{mn} &= 
-2\Im\left[\hbar^{-1}\(\<\phi_m|\<\psi_m(t)|\)H\(|\phi_n\>|\psi_n(t)\>\)\right] 
+2\Im\left[{1\over \hbar}\(\<\phi_m|\<\psi_m(t)|\)H\(|\phi_n\>|\psi_n(t)\>\)\right] 
 \end{align}
 and the states $|\psi_n(t)\>$ are the states of the rest of the world,
 (elements of $\S_R$ where $\S = \S_C\ox\S_R$),
